Delete obsolete hooks